fix icon alignment in Nav, Subnav and Tab components

--- a/src/less/components/subnav.less
+++ b/src/less/components/subnav.less
@@ -85,14 +85,18 @@
 /*
  * Items must target `a` elements to exclude other elements (e.g. dropdowns)
  * Using `:first-child` instead of `a` to support `span` elements for text
- * 1. Prevent gap if child element is `inline-block`, e.g. an icon
- * 2. Style
+ * 1. Center content vertically, e.g. an icon
+ * 2. Imitate white space gap when using flexbox
+ * 3. Style
  */
 
 .uk-subnav > * > :first-child {
     /* 1 */
-    display: block;
+    display: flex;
+    align-items: center;
     /* 2 */
+    column-gap: 0.25em;
+    /* 3 */
     color: @subnav-item-color;
     .hook-subnav-item;
 }
